<resources>
    <string name="app_name">PracticaExamen</string>
    <string name="buttonlogin">Login</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="cancelar">Cancelar</string>
    <string name="modificar_datos">Modificar Datos</string>
    <string name="nueva_pass">Nueva Pass</string>
    <string name="hora">Hora</string>
    <string name="minutos">Minutos</string>
    <string name="poner_alarma">Poner Alarma</string>
</resources>